--- a/assets/style.css
+++ b/assets/style.css
@@ -1,49 +1,59 @@
+header {
+  background: url(header-image.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 1;
+    background-color: #E3E8F0;
+  }
+
+  .container{
+    max-width: 90vw;
   }
   
-  textarea {
+  textarea{
     background: transparent;
     resize: none;
-    color: #de10ed;
-    border: 2px solid lime;
-    border-radius: 8px;
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    box-sizing: border-box;
+    padding: 10px;
+    letter-spacing: 1px;
   }
   
   .jumbotron {
     text-align: center;
-    background-color: transparent;
-    color: black;
-    border-radius: 0;
+    color: white;
+    -webkit-text-stroke: .5px black;
     border-bottom: 10px solid black;
   }
   
   .description {
     white-space: pre-wrap;
+    font-weight: 500;
   }
   
-  .time-block {
+  .calendar-item {
     text-align: center;
-    border-radius: 15px;
   }
   
   .row {
     white-space: pre-wrap;
     height: 80px;
     border-top: 1px solid white;
-    margin-bottom: 1rem;
+    border-radius: 15px;
+    margin-bottom: 3px;
   }
   
   .hour {
     background-color: #ffffff;
     color: #000000;
     border: 1px dashed #000000;
+    padding-top: 1rem;
+    text-align: center;
+    font-size: 2rem;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
   }
   
   .past {
@@ -69,8 +79,8 @@ body {
     color: white;
   }
   
-  .saveBtn i:hover {
-    font-size: 20px;
-    transition: all 0.3s ease-in-out;
+  .saveBtn:hover {
+    color: #ffc107;
+    transition: all 0.5s ease-in-out;
   }
   
