--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 header {
-  background: url(header-image.jpg);
+  background: url(images/header-image.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
